--- a/package.json
+++ b/package.json
@@ -41,10 +41,12 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "cookies-next": "^5.0.2",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.1",
     "framer-motion": "^11.11.17",
     "input-otp": "^1.4.1",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
     "next-nprogress-bar": "^2.3.15",
@@ -60,6 +62,7 @@
     "tailwind-gradient-mask-image": "^1.2.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "typescript-cookie": "^1.0.6",
     "vaul": "^1.1.1",
     "zod": "^3.23.8"
   },
