--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "embla-carousel-react": "^8.3.1",
     "framer-motion": "^11.11.17",
     "google-map-react": "^2.2.1",
+    "html-to-image": "^1.11.11",
+    "html2canvas": "^1.4.1",
     "input-otp": "^1.4.1",
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
@@ -54,6 +56,7 @@
     "next": "15.0.3",
     "next-nprogress-bar": "^2.3.15",
     "next-themes": "^0.4.3",
+    "qrcode.react": "^4.1.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
