--- a/package.json
+++ b/package.json
@@ -45,12 +45,14 @@
     "cookies-next": "^5.0.2",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.1",
+    "file-saver": "^2.0.5",
     "framer-motion": "^11.11.17",
     "google-map-react": "^2.2.1",
     "html-to-image": "^1.11.11",
     "html2canvas": "^1.4.1",
     "input-otp": "^1.4.1",
     "js-cookie": "^3.0.5",
+    "jszip": "^3.10.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
