--- a/package.json
+++ b/package.json
@@ -58,6 +58,9 @@
     "next": "15.0.3",
     "next-nprogress-bar": "^2.3.15",
     "next-themes": "^0.4.3",
+    "node-html-to-image": "^5.0.0",
+    "puppeteer": "^23.8.0",
+    "puppeteer-core": "^23.8.0",
     "qrcode.react": "^4.1.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
