--- a/package.json
+++ b/package.json
@@ -39,11 +39,13 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@radix-ui/react-visually-hidden": "^1.1.0",
     "@react-google-maps/api": "^2.20.3",
+    "@react-pdf/renderer": "^4.1.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "cookies-next": "^5.0.2",
     "date-fns": "^3.6.0",
+    "dom-to-image-more": "^3.5.0",
     "embla-carousel-react": "^8.3.1",
     "file-saver": "^2.0.5",
     "framer-motion": "^11.11.17",
@@ -77,6 +79,7 @@
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "typescript-cookie": "^1.0.6",
+    "uuid": "^11.0.3",
     "vaul": "^1.1.1",
     "zod": "^3.23.8"
   },
