--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
+    "react-qrcode-logo": "^3.0.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.13.3",
     "sonner": "^1.7.0",
