--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.7.1",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
@@ -48,6 +50,7 @@
     "dom-to-image-more": "^3.5.0",
     "embla-carousel-react": "^8.3.1",
     "file-saver": "^2.0.5",
+    "fortawesome": "^0.0.1-security",
     "framer-motion": "^11.11.17",
     "google-map-react": "^2.2.1",
     "html-to-image": "^1.11.11",
@@ -58,6 +61,7 @@
     "leaflet": "^1.9.4",
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
+    "next-absolute-url": "^1.2.2",
     "next-nprogress-bar": "^2.3.15",
     "next-themes": "^0.4.3",
     "node-html-to-image": "^5.0.0",
